maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: value && is not a member of Unit
    if(murNord() && !estFaceMur() && testGauche())
                 ^Escaper:64: warning: enclosing method murNord has result type Unit: return value discarded
  return mur
  ^